added template task and template

--- a/roles/dbservers/tasks/main.yml
+++ b/roles/dbservers/tasks/main.yml
@@ -5,3 +5,5 @@
   include: mysqlinstall.yml
 - name: remove mysql5.7 .rpm
   include: mysqlpkgremove.yml
+- name: create custom my.cnf at remote host
+  include: mysqlcnf.yml
